Fix deprecation warning in DependencyInfo task (#2501)
(cherry picked from commit c15f4ce0dc62b47740d1dc019498dd191d5f196c)